Se crea metodo get by id, probado y funcionando
